# ids_project

./: .gitignore  .pre-commit-config.yaml  0MyLibrary.bib  0_fetch_data.ipynb  1_eda.ipynb  1_load_and_eda.ipynb  2_game_metadata_to_dict_and_json.ipynb  2_game_visualization_and_info.ipynb  3_review_distribution_visualizations.ipynb  MAIN_file_ids_project.dep  MAIN_file_ids_project.tex  Mini-Project Canvas Board Game Geeks.docx  My Library.bib  README.md  git_setup.txt  pyproject.toml
BGGRecommenderApp/: .pre-commit-config.yaml  pyproject.toml
BGGRecommenderApp/bggrecommenderapp/: __init__.py  data_collector.py  data_handler.py  main_page.py  recommender.py
BGGRecommenderApp/bggrecommenderapp/templates/: base.html  main_page.html
bggrecommenderapp/: __init__.py  data_collector.py  data_handler.py  recommending.py  util.py
bggrecommenderapp/static/: auto-complete.js  chart.js  style.css
bggrecommenderapp/templates/: base.html  index.html  loading.html  main_page.html  recs_page.html
documentation/: 0MyLibrary.bib  0Preamble_ids.sty  MAIN_file_ids_project.dep  MAIN_file_ids_project.tex  aaTestA_ids.dep  presentation_ids_project.pptx
notebooks/: 0_fetch_data.ipynb  1_load_and_eda.ipynb  2_game_metadata_to_dict_and_json.ipynb  nmf.ipynb
src/: load_data.py
