[project]
name = "bggrecommenderapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
black = "^25.9.0"
pre-commit = "^4.3.0"
pyarrow-stubs = "^20.0.0.20250928"
pandas-stubs = "^2.3.2.250926"
